# personal-rag

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.jetson  Frontmatter Fix Report.md  Makefile  RAG Project Review Report.md  README.md  config.yaml  docker-compose.jetson.yml  docker-compose.yml  index_obsidian.py  pyproject.toml  query_obsidian.py  requirements-direct.txt  requirements-jetson.txt  requirements.txt  test_queries.py  utils.py
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.jetson.yml  docker-compose.yml
docs/: RAG Project Fix Summary - Cryptography Dependency.md  RAG Project Fix Summary.md  architecture.md  configuration.md  jetson.md
src/rag/: chunking.py  indexer.py  indexing.py  query.py  utils.py
src/rag/extractors/: __init__.py  json_doc.py  markdown.py  pdf.py
tests/: conftest.py  test_chunking.py  test_extractors.py  test_indexing.py  test_queries.py
