[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "personal-rag"
version = "0.1.0"
description = "Local semantic search over an Obsidian vault and PDF library"
requires-python = ">=3.10"
# torch is intentionally excluded — install separately:
#   x86:    pip install torch==2.5.1
#   Jetson: pip install torch torchvision --index-url https://pypi.jetson-ai-lab.io/jp6/cu126
dependencies = [
    "chromadb==0.6.3",
    "sentence-transformers==3.3.1",
    "python-frontmatter==1.3.0",
    "PyYAML==6.0.3",
    "pypdf==6.12.2",
    "posthog==7.17.0",
    "python-dotenv==1.2.2",
]

[project.scripts]
rag-index = "rag.indexer:main"
rag-query = "rag.query:main"

[tool.setuptools.packages.find]
where = ["src"]
